[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "dna_kmer"
version = "0.0.1"
authors = [
  { name="sznistvan", email="szni98@gmail.com" },
]
description = "DNA string to k-mers"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sznistvan/dna_kmer"
"Bug Tracker" = "https://github.com/sznistvan/dna_kmer/issues"